--- a/03-despliegue-de-aplicaciones-web/apache-tomcat-docker/apache-config/httpd-vhosts.conf
+++ b/03-despliegue-de-aplicaciones-web/apache-tomcat-docker/apache-config/httpd-vhosts.conf
@@ -46,11 +46,15 @@
     ProxyPass /demo ajp://tomcat:8009/demo
     ProxyPassReverse /demo ajp://tomcat:8009/demo
     
-    # Ejemplo 2: Proxy para la raíz de Tomcat
+    # Ejemplo 2: Proxy para aplicación Formulario
+    ProxyPass /Formulario ajp://tomcat:8009/Formulario
+    ProxyPassReverse /Formulario ajp://tomcat:8009/Formulario
+    
+    # Ejemplo 3: Proxy para la raíz de Tomcat
     ProxyPass /tomcat ajp://tomcat:8009/
     ProxyPassReverse /tomcat ajp://tomcat:8009/
     
-    # Ejemplo 3: Proxy para Tomcat Manager (interfaz administrativa)
+    # Ejemplo 4: Proxy para Tomcat Manager (interfaz administrativa)
     # IMPORTANTE: Solo para desarrollo, en producción usar autenticación adicional
     <Location /manager>
         ProxyPass ajp://tomcat:8009/manager
